objects/Backlog_Item__c.object
<CustomObject>
    <fields>
        <fullName>Analysis_Phase__c</fullName>
        <label>Analysis Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approach__c</fullName>
        <label>Approach</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Backlog_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Case__c</fullName>
        <label>Business Case</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>1 = Low Effort
10 = High Effort</description>
        <label>Cost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotfix_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotfix Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Market__c</fullName>
        <label>International Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Market-Specific/USA</fullName>
                    <default>true</default>
                    <label>Not Market-Specific/USA</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Europe/UK</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>UAE/Middle East</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Other (provide in description)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feature</fullName>
                    <default>true</default>
                    <label>Feature</label>
                </value>
                <value>
                    <fullName>Epic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Epic</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Backlog_Item__c.Item_Type__c</field>
                <operation>equals</operation>
                <value>Epic</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Backlog_Item__c</referenceTo>
        <relationshipLabel>Product Backlog Items</relationshipLabel>
        <relationshipName>Product_Backlog_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch</fullName>
                </value>
                <value>
                    <fullName>CSN - Planners</fullName>
                </value>
                <value>
                    <fullName>CSN - Search &amp; DG</fullName>
                </value>
                <value>
                    <fullName>CSN - Suppliers</fullName>
                </value>
                <value>
                    <fullName>CVII</fullName>
                </value>
                <value>
                    <fullName>eMarketing</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>OnArrival</fullName>
                </value>
                <value>
                    <fullName>SMM</fullName>
                </value>
                <value>
                    <fullName>SocialWall</fullName>
                </value>
                <value>
                    <fullName>SpeedRFP/EMI</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>9.0</fullName>
                </value>
                <value>
                    <fullName>9.0 Hotfix</fullName>
                </value>
                <value>
                    <fullName>9.0 MR1</fullName>
                </value>
                <value>
                    <fullName>9.0 MR2</fullName>
                </value>
                <value>
                    <fullName>9.0 MR3</fullName>
                </value>
                <value>
                    <fullName>9.0 MR4</fullName>
                </value>
                <value>
                    <fullName>9.1</fullName>
                </value>
                <value>
                    <fullName>9.1 Hotfix</fullName>
                </value>
                <value>
                    <fullName>9.1 MR1</fullName>
                </value>
                <value>
                    <fullName>9.1 MR2</fullName>
                </value>
                <value>
                    <fullName>9.1 MR3</fullName>
                </value>
                <value>
                    <fullName>9.1 MR4</fullName>
                </value>
                <value>
                    <fullName>10.0</fullName>
                </value>
                <value>
                    <fullName>10.0 Hotfix</fullName>
                </value>
                <value>
                    <fullName>10.0 MR1</fullName>
                </value>
                <value>
                    <fullName>10.0 MR2</fullName>
                </value>
                <value>
                    <fullName>10.0 MR3</fullName>
                </value>
                <value>
                    <fullName>10.0 MR4</fullName>
                </value>
                <value>
                    <fullName>10.1</fullName>
                </value>
                <value>
                    <fullName>10.1 Hotfix</fullName>
                </value>
                <value>
                    <fullName>10.1 MR1</fullName>
                </value>
                <value>
                    <fullName>10.1 MR2</fullName>
                </value>
                <value>
                    <fullName>10.1 MR3</fullName>
                </value>
                <value>
                    <fullName>10.1 MR4</fullName>
                </value>
                <value>
                    <fullName>PSR  Event Phase</fullName>
                </value>
                <value>
                    <fullName>PSR  Survey Phase</fullName>
                </value>
                <value>
                    <fullName>PSR  Admin Phase</fullName>
                </value>
                <value>
                    <fullName>PSR  CSN Phase</fullName>
                </value>
                <value>
                    <fullName>PSR - eMarketing (Part 2)</fullName>
                </value>
                <value>
                    <fullName>PSR - Contacts (Part 2)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirements_Link__c</fullName>
        <label>Requirements Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>(11 - VALUE(TEXT(Cost__c))) * VALUE(TEXT(Value__c))</formula>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Ice</fullName>
                    <default>true</default>
                    <label>On Ice</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Closed - Released</fullName>
                </value>
                <value>
                    <fullName>Closed - Abandoned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Experience</fullName>
                </value>
                <value>
                    <fullName>Backend</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Issue__c</fullName>
        <label>Ticket/Issue #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>1 = Not Valuable
10 = Highly Valuable</description>
        <label>Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Backlog Item</label>
    <nameField>
        <label>Backlog Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Backlog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Epic__c</field>
            <operation>equals</operation>
            <value>reporting</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brandon_and_Shravan</fullName>
        <columns>NAME</columns>
        <columns>Assignee__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Score__c</columns>
        <columns>Value__c</columns>
        <columns>Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Requirements_Link__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assignee__c</field>
            <operation>equals</operation>
            <value>Shravan Suri</value>
        </filters>
        <label>Shravan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSN</fullName>
        <columns>NAME</columns>
        <columns>Score__c</columns>
        <columns>Value__c</columns>
        <columns>Cost__c</columns>
        <columns>Priority__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Hotfix_Candidate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN - Planners,CSN - Search &amp; DG,CSN - Suppliers</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Ice</value>
        </filters>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Feature</value>
        </filters>
        <label>CSN Future Enhancements</label>
        <language>en_US</language>
        <sharedTo>
            <group>Tech_PMs_CSN</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSN_Future_Enhancements_Not_Rated</fullName>
        <columns>NAME</columns>
        <columns>Score__c</columns>
        <columns>Value__c</columns>
        <columns>Cost__c</columns>
        <columns>Priority__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Item_Type__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Hotfix_Candidate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN - Planners,CSN - Search &amp; DG,CSN - Suppliers</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Ice</value>
        </filters>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Feature</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
        </filters>
        <label>CSN Future Enhancements - Not Rated</label>
        <language>en_US</language>
        <sharedTo>
            <role>Product_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSN_Future_Enhancements_Not_Rated1</fullName>
        <columns>NAME</columns>
        <columns>Score__c</columns>
        <columns>Value__c</columns>
        <columns>Cost__c</columns>
        <columns>Priority__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Item_Type__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Hotfix_Candidate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN - Planners,CSN - Search &amp; DG,CSN - Suppliers</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Ice</value>
        </filters>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Feature</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Pandelidis</value>
        </filters>
        <label>CSN Future Enhancements - temp</label>
        <language>en_US</language>
        <sharedTo>
            <role>Product_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSN_Scheduled_Enhancements</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN - Planners,CSN - Search &amp; DG,CSN - Suppliers</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Feature,Epic</value>
        </filters>
        <label>CSN Scheduled Enhancements</label>
        <language>en_US</language>
        <sharedTo>
            <role>Product_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CrowdCompass</fullName>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Ticket_Issue__c</columns>
        <columns>Priority__c</columns>
        <columns>Analysis_Phase__c</columns>
        <columns>Requirements_Link__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CrowdCompass</value>
        </filters>
        <filters>
            <field>Parent_Epic__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed - Released,Closed - Abandoned</value>
        </filters>
        <label>CrowdCompass</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EMI_Future_Enhancements</fullName>
        <columns>NAME</columns>
        <columns>Score__c</columns>
        <columns>Value__c</columns>
        <columns>Cost__c</columns>
        <columns>Priority__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Hotfix_Candidate__c</columns>
        <columns>Assignee__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>EMI Future Enhancements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Enhancement_Backlog_On_Ice</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Analysis_Phase__c</columns>
        <columns>Approach__c</columns>
        <columns>Assignee__c</columns>
        <columns>Business_Case__c</columns>
        <columns>Cost__c</columns>
        <columns>Hotfix_Candidate__c</columns>
        <columns>International_Market__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Priority__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Ice</value>
        </filters>
        <label>Enhancement Backlog - On Ice</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Event2</fullName>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Ice</value>
        </filters>
        <label>Event - On Ice</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Event_Closed_Released</fullName>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - Released</value>
        </filters>
        <label>Event - Closed - Released</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Kunal_ER_Backlog</fullName>
        <columns>NAME</columns>
        <columns>Assignee__c</columns>
        <columns>Cost__c</columns>
        <columns>Priority__c</columns>
        <columns>Product__c</columns>
        <columns>Requirements_Link__c</columns>
        <columns>Score__c</columns>
        <columns>Status__c</columns>
        <columns>Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assignee__c</field>
            <operation>equals</operation>
            <value>Kunal Lal</value>
        </filters>
        <label>Kunal - ER Backlog</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SMM_Backlog_Items</fullName>
        <columns>NAME</columns>
        <columns>Approach__c</columns>
        <columns>Business_Case__c</columns>
        <columns>Requirements_Link__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Analysis_Phase__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Priority__c</columns>
        <columns>Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>SMM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Ice,Scheduled</value>
        </filters>
        <label>SMM - On Ice and Scheduled</label>
        <language>en_US</language>
        <sharedTo>
            <group>Tech_PMs_SMM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SMM_Released</fullName>
        <columns>NAME</columns>
        <columns>Approach__c</columns>
        <columns>Business_Case__c</columns>
        <columns>Cost__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Release__c</columns>
        <columns>Requirements_Link__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>SMM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - Released</value>
        </filters>
        <label>SMM - Released</label>
        <language>en_US</language>
        <sharedTo>
            <group>Tech_PMs_SMM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Survey_Backlogs</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Cost__c</columns>
        <columns>Value__c</columns>
        <columns>Score__c</columns>
        <columns>Priority__c</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>Survey,eMarketing</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Ice,Scheduled</value>
        </filters>
        <filters>
            <field>Hotfix_Candidate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Survey Hot Fix Candidates (To Do)</label>
        <language>en_US</language>
    </listViews>
</CustomObject>